--- a/src/Presentation/SmartStore.Web/Views/Boards/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Index.cshtml
@@ -1,6 +1,4 @@
 ﻿@model BoardsIndexModel
-@using SmartStore.Core.Infrastructure;
-@using SmartStore.Services.Helpers;
 @using SmartStore.Web.Models.Boards;
 @{
     Layout = "_Layout";
@@ -8,16 +6,14 @@
     Html.AddTitleParts(T("Forum.PageTitle.Default").Text);
 }
 <div class="page forums-main">
-    <div class="forums-main-header clearfix">
-        <div class="current-time pull-left">
+    <div class="forums-main-header">
+        <div class="current-time">
             @Model.CurrentTime.ToString("F")
         </div>
         @{ Html.RenderPartial("_SearchBox"); }
     </div>
-
-    <div>
-        @{ Html.RenderAction("TopicBlock", "Topic", new { systemName = "ForumWelcomeMessage" }); }
-    </div>
+    
+    @{ Html.RenderAction("TopicBlock", "Topic", new { systemName = "ForumWelcomeMessage" }); }
 
     @foreach (var forumGroup in Model.ForumGroups)
     {
