--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdatePost.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdatePost.cshtml
@@ -1,14 +1,14 @@
 ﻿@model EditForumPostModel
 @using SmartStore.Core.Domain.Forums;
-@using SmartStore.Services.Forums;
-@using SmartStore.Services.Seo;
 @using SmartStore.Web;
 @using SmartStore.Web.Models.Boards;
 
 @using (Html.BeginForm())
 {
     <div class="page post-edit">
-        <h2 class="title">@(Model.IsEdit ? T("Forum.EditPost") : T("Forum.NewPost"))</h2>
+        <div class="page-title">
+            <h2>@(Model.IsEdit ? T("Forum.EditPost") : T("Forum.NewPost"))</h2>
+        </div>
 
         <div class="message-error">
             @Html.ValidationSummary(true)
@@ -16,23 +16,23 @@
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.ForumTopicId)
 
-        <div class="row">
-            <label class="col-sm-2 text-right form-control-label">@T("Forum.ForumName")</label>
-            <div class="col-sm-10">@Model.ForumName</div>
+        <div class="form-group row pt-3">
+            <label class="col-sm-3">@T("Forum.ForumName")</label>
+            <div class="col-sm-9">@Model.ForumName</div>
         </div>
 
-        <div class="row mt-3">
-            <label class="col-sm-2 text-right form-control-label">@T("Forum.ForumName")</label>
-            <div class="col-sm-10">@Model.ForumTopicSubject</div>
+        <div class="form-group row">
+            <label class="col-sm-3">@T("Forum.TopicSubject")</label>
+            <div class="col-sm-9">@Model.ForumTopicSubject</div>
         </div>
 
         <div class="row">
-            <div class="col-sm-push-2 col-sm-10 mt-3">
+            <div class="push-sm-3 col-sm-9 my-3">
                 @if (Model.ForumEditor == EditorType.BBCodeEditor)
                 {
                     @Html.BBCodeEditor("Text");
                 }
-                @Html.TextAreaFor(model => model.Text, new { @class = "forum-post-text", TextMode = "MultiLine" })
+                @Html.TextAreaFor(model => model.Text, new { @class = "form-control forum-post-text", TextMode = "MultiLine" })
                 @Html.ValidationMessageFor(model => model.Text)
             </div>
         </div>
@@ -40,9 +40,9 @@
         @if (Model.IsCustomerAllowedToSubscribe)
         {
             <div class="row">
-                <div class="col-sm-push-2 col-sm-10 mt-3">
-                    <label>
-                        @Html.CheckBox("Subscribed", @Model.Subscribed)
+                <div class="push-sm-3 col-sm-9 mt-3 checkbox">
+                    <label class="form-check-label">
+                        @Html.CheckBox("Subscribed", @Model.Subscribed, new { @class = "check-box form-check-input" })
                         @T("Forum.NotifyWhenSomeonePostsInThisTopic")
                     </label>
                 </div>
@@ -50,15 +50,15 @@
         }
 
         <div class="row">
-            <div class="col-sm-push-2 col-sm-10 mt-3">
+            <div class="push-sm-3 col-sm-9 mt-3">
                 <button type="submit" class="btn btn-primary">
-					<i class="fa fa-reply"></i>
-					@T("Forum.Submit")
-				</button>
+                    <i class="fa fa-reply"></i>
+                    <span>@T("Forum.Submit")</span>
+                </button>
                 <button class="btn" onclick="setLocation('@Url.RouteUrl("TopicSlug", new { id = Model.ForumTopicId, slug = Model.ForumTopicSeName })'); return false;">
-					<i class="fa fa-times"></i>
-					@T("Forum.Cancel")
-				</button>
+                    <i class="fa fa-times"></i>
+                    <span>@T("Forum.Cancel")</span>
+                </button>
             </div>
         </div>
     </div>
