--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdateTopic.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdateTopic.cshtml
@@ -1,15 +1,12 @@
 ﻿@model EditForumTopicModel
 @using SmartStore.Core.Domain.Forums;
-@using SmartStore.Services.Forums;
-@using SmartStore.Services.Seo;
 @using SmartStore.Web;
 @using SmartStore.Web.Models.Boards;
-
 
 @using (Html.BeginForm())
 {
     <div class="page post-edit">
-        <div class="title">
+        <div class="page-title">
             <h2>@(Model.IsEdit ? T("Forum.EditTopic") : T("Forum.NewTopic"))</h2>
         </div>
 
@@ -20,28 +17,26 @@
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.ForumId)
 
-        <div class="form-group row">
-            <label class="col-sm-2 text-right form-control-label">@T("Forum.ForumName")</label>
-            <div class="col-sm-10">
-                <span>@Model.ForumName</span>
-            </div>
+        <div class="form-group row pt-3">
+            <label class="col-sm-3">@T("Forum.ForumName")</label>
+            <div class="col-sm-9">@Model.ForumName</div>
         </div>
 
         <div class="form-group row">
-            <label class="col-sm-2 text-right form-control-label">@T("Forum.TopicTitle")</label>
-            <div class="col-sm-10">
+            <label class="col-sm-3 col-form-label">@T("Forum.TopicTitle")</label>
+            <div class="col-sm-9">
                 @Html.TextBoxFor(model => model.Subject, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Subject)
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-push-2 col-sm-10 mt-3">
+            <div class="push-sm-3 col-sm-9 my-3">
                 @if (Model.ForumEditor == EditorType.BBCodeEditor)
                 {
                     @Html.BBCodeEditor("Text");
                 }
-                @Html.TextAreaFor(model => model.Text, new { @class = "forum-post-text", TextMode = "MultiLine" })
+                @Html.TextAreaFor(model => model.Text, new { @class = "form-control forum-post-text", TextMode = "MultiLine" })
                 @Html.ValidationMessageFor(model => model.Text)
             </div>
         </div>
@@ -49,8 +44,8 @@
         @if (Model.IsCustomerAllowedToSetTopicPriority)
         {
             <div class="form-group row">
-                <label class="col-sm-2 text-right form-control-label">@T("Forum.Priority")</label>
-                <div class="col-sm-10">
+                <label class="col-sm-3 col-form-label">@T("Forum.Priority")</label>
+                <div class="col-sm-9">
                     @Html.DropDownList("TopicTypeId", new SelectList(@Model.TopicPriorities, "Value", "Text", @Model.TopicTypeId))
                 </div>
             </div>
@@ -59,9 +54,9 @@
         @if (Model.IsCustomerAllowedToSubscribe)
         {
             <div class="row">
-                <div class="col-sm-push-2 col-sm-10 mt-3">
-                    <label>
-                        @Html.CheckBox("Subscribed", @Model.Subscribed)
+                <div class="push-sm-3 col-sm-9 mt-3 checkbox">
+                    <label class="form-check-label">
+                        @Html.CheckBox("Subscribed", @Model.Subscribed, new { @class = "check-box form-check-input" })
                         @T("Forum.NotifyWhenSomeonePostsInThisTopic")
                     </label>
                 </div>
@@ -69,14 +64,14 @@
         }
 
         <div class="row">
-            <div class="col-sm-push-2 col-sm-10 mt-3">
+            <div class="push-sm-3 col-sm-9 mt-3">
                 <button type="submit" class="btn btn-primary">
 					<i class="fa fa-reply"></i>
-					@T("Forum.Submit")
+                    <span>@T("Forum.Submit")</span>
 				</button>
                 <button class="btn" onclick="setLocation('@Url.RouteUrl("ForumSlug", new { id = Model.ForumId, slug = Model.ForumSeName }) '); return false;">
                     <i class="fa fa-times"></i>
-                    @T("Forum.Cancel")
+                    <span>@T("Forum.Cancel")</span>
                 </button>
             </div>
         </div>
