--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_SearchBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_SearchBox.cshtml
@@ -1,17 +1,17 @@
-﻿@using (Html.BeginRouteForm("BoardSearch", FormMethod.Get, new { @class = "forum-search-box form-inline" }))
-{
+﻿<div class="row">
+    <div class="col-10 push-1 mt-4">
 
-    var searchText = T("Forum.SearchForumsTooltip");
+        @using (Html.BeginRouteForm("BoardSearch", FormMethod.Get, new { @class = "forum-search-box" }))
+        {
+            var searchText = T("Forum.SearchForumsTooltip");
 
-    <div class="form-group">
-        <div class="input-group">
-            <div class="input-append">
+            <div class="input-group d-flex">
                 @Html.TextBox("searchterms", searchText, new { @class = "forum-search-box-text form-control", placeholder = searchText, onclick = String.Format("if(this.value=='{0}')this.value=''", searchText), onblur = String.Format("if(this.value=='')this.value='{0}';", searchText) })
-                <input type="submit" value="@T("Forum.SearchButton")" class="btn btn-warning input-group-addon" />
+                <input type="submit" value="@T("Forum.SearchButton")" class="btn btn-primary input-group-addon" />
             </div>
-        </div>
+            <div class="advanced mt-2">
+                @Html.RouteLink(@T("Forum.AdvancedSearch").Text, "BoardSearch", new { adv = true }, new { title = @T("Forum.AdvancedSearch").Text })
+            </div>
+        }
     </div>
-    <div class="advanced">
-        @Html.RouteLink(@T("Forum.AdvancedSearch").Text, "BoardSearch", new { adv = true }, new { title = @T("Forum.AdvancedSearch").Text })
-    </div>
-}
+</div>
