--- a/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
@@ -1,7 +1,5 @@
 ﻿@model CheckoutCompletedModel
-@using SmartStore.Core.Domain.Orders;
 @using SmartStore.Web.Models.Checkout;
-@using SmartStore.Web.Models.Common;
 @{
     Layout = "_Checkout";
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
@@ -30,7 +28,7 @@
 					<a href="@Url.Action("Details", "Order", new { id = Model.OrderId })" rel="nofollow">@Model.OrderNumber</a>
                 </p>
             </div>
-            <p class="select-button">
+            <p class="pt-3">
 				<a href="@Url.Action("Details", "Order", new { id = Model.OrderId })" class="btn btn-warning" rel="nofollow">
 					<i class="fa fa-fw fa-list-alt"></i>
 					@T("Checkout.PlacedOrderDetails")
