--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -1,7 +1,5 @@
 ﻿@model CheckoutConfirmModel
-@using SmartStore.Core.Domain.Orders;
 @using SmartStore.Web.Models.Checkout;
-@using SmartStore.Web.Models.Common;
 @{
 	Layout = "_Checkout";
 	Html.AddTitleParts(T("PageTitle.Checkout").Text);
@@ -62,7 +60,7 @@
                                 <div class="modal-content">
                                     <div class="modal-body p-0"></div>
                                     <div class="modal-footer">
-                                        <button class="btn" data-dismiss="modal">@T("Common.Confirm")</button>
+                                        <button class="btn btn-secondary" data-dismiss="modal">@T("Common.Confirm")</button>
                                     </div>
                                 </div>
                             </div>
@@ -110,8 +108,7 @@
         }
 
         <div class="confirm-order">
-            
-            <div class="select-button bottom clearfix">
+            <div class="buttons">
                 @if (!String.IsNullOrEmpty(Model.MinOrderTotalWarning))
                 {
                     @Model.MinOrderTotalWarning
@@ -121,10 +118,12 @@
                     <script type="text/javascript">
                         $(function () {
                             var checkoutButton = $(".confirm-order-next-step-button");
-                            checkoutButton.click(function () {
-                            	var termOfServiceOk = true,
+                            checkoutButton.on("click", function () {
+                                var termOfServiceOk = true,
                             		userAgreementsOk = true,
                             		esdRevocationWaiverOk = true;
+
+                                var cartItems = $('#cart-items');
 
                             	$("#customercommenthidden").val($("#CustomerComment").val());
                             	$('#SubscribeToNewsLetterHidden').val($('input[name=SubscribeToNewsLetter]').is(':checked'));
@@ -146,12 +145,12 @@
                                 }
 
                             	// agree user agreement for downloadable products
-                            	$('table.table-order-products').find('input[name^=AgreeUserAgreement]').each(function () {
+                                cartItems.find('input[name^=AgreeUserAgreement]').each(function () {
                             		if (!$(this).is(':checked')) {
                             			userAgreementsOk = false;
                             			displayNotification('@T("Checkout.DownloadUserAgreement.PleaseAgree").ToString().EncodeJsString('"', false)', 'error');
                             			if (termOfServiceOk) {
-                            				$.scrollTo($('table.table-order-products'), 800, { offset: -20 });
+                            			    $.scrollTo(cartItems, 800, { offset: -20 });
                             			}
                             			return false;
                             		}
@@ -161,12 +160,12 @@
 								@if(Model.ShowEsdRevocationWaiverBox)
 								{
 									<text>
-                            		$('table.table-order-products').find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
+                                    cartItems.find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
                             			if (!$(this).is(':checked')) {
                             				esdRevocationWaiverOk = false;
                             				displayNotification('@T("Checkout.EsdRevocationWaiverConfirmation.PleaseAgree").ToString().EncodeJsString('"', false)', 'error');
                             				if (termOfServiceOk) {
-                            					$.scrollTo($('table.table-order-products'), 800, { offset: -20 });
+                            				    $.scrollTo(cartItems, 800, { offset: -20 });
                             				}
                             				return false;
                             			}
@@ -183,8 +182,8 @@
 
                             		if (true === submitOrderEvent.isOrderValid) {
                             			checkoutButton.attr("disabled", "disabled");
-                            			checkoutButton.find(".fa-caret-right")
-											.removeClass("fa-caret-right")
+                            		    checkoutButton.find(".fa-angle-right")
+											.removeClass("fa-angle-right")
 											.addClass("fa-spinner fa-spin");
 
                             			$('#confirm-order-form').submit();
@@ -194,14 +193,14 @@
                         });
                     </script>
                     
-                    <a class="btn btn-secondary pull-left" href="@Url.Action("PaymentMethod")">
-                        <i class="fa fa-caret-left"></i>
+                    <a class="btn btn-secondary btn-lg" href="@Url.Action("PaymentMethod")">
+                        <i class="fa fa-angle-left"></i>
                         <span>@T("Common.Back")</span>
                     </a>
                     
-                    <button class="btn btn-danger btn-large pull-right confirm-order-next-step-button" onclick="return false;" >
+                    <button class="btn btn-danger btn-lg confirm-order-next-step-button" onclick="return false;" >
                         <span>@T("Checkout.ConfirmButton")</span>
-                        <i class="fa fa-fw fa-caret-right"></i> 
+                        <i class="fa fa-fw fa-angle-right"></i> 
                     </button>
                 }
             </div>
