--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -78,16 +78,16 @@
                 }
             </div>
 			
-            <div class="select-button clearfix">
-                <a class="btn btn-secondary pull-left" href="@Url.Action("ShippingAddress")">
-                    <i class="fa fa-caret-left"></i>
+            <div class="buttons">
+                <a class="btn btn-secondary btn-lg" href="@Url.Action("ShippingAddress")">
+                    <i class="fa fa-angle-left"></i>
                     <span>@T("Common.Back")</span>
                 </a>    
                 <input type="submit" name="nextstep" id="nextstep" style="display:none" />
 
-                <button class="btn btn-warning pull-right shipping-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
+                <button class="btn btn-warning btn-lg shipping-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
 					<span>@T("Checkout.NextButton")</span>
-                    <i class="fa fa-caret-right"></i>
+                    <i class="fa fa-angle-right"></i>
                 </button>
             </div>
 
@@ -98,7 +98,6 @@
 
 <script>
 	$(function () {
-
 		$('.checkout-data .opt-radio').on('change', function (e) {
 			var radio = $(this);
 			var systemName = radio.val();
